Add vision support for OpenAI and Azure.
@JsonInclude(JsonInclude.Include.NON_NULL) for OpenAIChatCompletionRequest is required because the vision model does not support "tools" and fails if the attribute is present.