@@ -18,7 +18,10 @@ import ee.carlrobert.llm.client.http.exchange.StreamHttpExchange;
 import ee.carlrobert.llm.client.openai.completion.ErrorDetails;
 import ee.carlrobert.llm.client.openai.completion.request.OpenAIChatCompletionMessage;
 import ee.carlrobert.llm.client.openai.completion.request.OpenAIChatCompletionRequest;
+import ee.carlrobert.llm.client.openai.completion.request.OpenAIMessageTextContent;
 import ee.carlrobert.llm.completion.CompletionEventListener;
+
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import okhttp3.sse.EventSource;
@@ -52,7 +55,7 @@ class AzureClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user", "content", prompt)));
+              List.of(Map.of("role", "user", "content", Collections.singletonList(Map.of("type", "text", "text", prompt)))));
       return List.of(
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("role", "assistant")))),
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("content", "Hello")))),
@@ -65,7 +68,7 @@ class AzureClientTest extends BaseTest {
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage("user", prompt)))
+                List.of(new OpenAIChatCompletionMessage("user", new OpenAIMessageTextContent(prompt))))
                 .setMaxTokens(500)
                 .setTemperature(0.5)
                 .setPresencePenalty(0.1)
@@ -109,7 +112,7 @@ class AzureClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user", "content", prompt)));
+              List.of(Map.of("role", "user", "content", Collections.singletonList(Map.of("type", "text", "text", prompt)))));
       return new ResponseEntity(new ObjectMapper().writeValueAsString(
           Map.of("choices", List.of(Map.of("message", Map.of(
               "role", "assistant",
@@ -122,7 +125,7 @@ class AzureClientTest extends BaseTest {
         .setActiveDirectoryAuthentication(true)
         .build()
         .getChatCompletion(new OpenAIChatCompletionRequest.Builder(
-            List.of(new OpenAIChatCompletionMessage("user", prompt)))
+            List.of(new OpenAIChatCompletionMessage("user", new OpenAIMessageTextContent(prompt))))
             .setMaxTokens(500)
             .setTemperature(0.5)
             .setPresencePenalty(0.1)
@@ -163,7 +166,7 @@ class AzureClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user", "content", prompt)));
+              List.of(Map.of("role", "user", "content",  Collections.singletonList(Map.of("type", "text", "text", prompt)))));
       return List.of(
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("role", "assistant")))),
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("content", "Hello")))),
@@ -176,7 +179,7 @@ class AzureClientTest extends BaseTest {
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage("user", prompt)))
+                List.of(new OpenAIChatCompletionMessage("user", new OpenAIMessageTextContent(prompt))))
                 .setMaxTokens(500)
                 .setTemperature(0.5)
                 .setPresencePenalty(0.1)
@@ -215,7 +218,7 @@ class AzureClientTest extends BaseTest {
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage("user", "TEST_PROMPT")))
+                List.of(new OpenAIChatCompletionMessage("user", new OpenAIMessageTextContent("TEST_PROMPT"))))
                 .build(),
             new CompletionEventListener<String>() {
               @Override
@@ -244,7 +247,7 @@ class AzureClientTest extends BaseTest {
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage("user", "TEST_PROMPT")))
+                List.of(new OpenAIChatCompletionMessage("user", new OpenAIMessageTextContent("TEST_PROMPT"))))
                 .build(),
             new CompletionEventListener<String>() {
               @Override
